# lindorm-tsdb-contest

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  TestMyDb.cpp  data.txt  debug.sh  interface.md  release.sh
example/: CMakeLists.txt  EvaluationSample.cpp
include/: Root.h  TSDBEngine.hpp  TSDBEngineImpl.h  aggregate_manager.h  base.h  compaction_manager.h  convert_manager.h  downsample_manager.h  index_manager.h  latest_manager.h  time_range_manager.h  utils.h
include/common/: arena.h  bit_utils.hpp  bitmap.h  bloom_filter.h  coding.h  config.h  creator.h  data_type_factory.h  duckdb.h  exception.h  helper.hpp  hugeint.hpp  limits.hpp  mem_pool.h  osLz4.h  random.h  range.h  slice.h  spinlock.h  status.h  thread_pool.h  time_range.h  unaligned.h  winapi.hpp
include/compression/: boolean_compression.h  chimp_compression.h  compressor.h  float_compression.h  integer_compression.h  string_compressor.h
include/compression/simple8b/: simple8b.h
include/compression/utils/: BitHelpers.h  common_BitHelpers.h  unaligned.h
include/io/: BitHelpers.h  compression.h  file_reader.h  file_system.h  file_writer.h  io_utils.h  page_io.h
include/io/compression_algorithm/: gorilla_compressor.h
include/storage/: column_reader.h  column_writer.h  compaction.h  data_convertor.h  delta_writer.h  index_page_builder.h  memmap.h  memmap_writer.h  memtable.h  page.h  page_builder.h  page_decoder.h  page_encoder.h  partial_schema.h  plain_page_builder.h  rowset_writer.h  rowwise_iterator.h  schema.h  segment.h  segment_reader.h  segment_traits.h  segment_writer.h  skiplist.h  table_reader.h  table_schema.h  table_writer.h  tsm_file.h  tsm_writer.h
include/storage/caches/: hash_table.h  lru_cache.h  shard_lru_cache.h
include/storage/indexs/: index_page.h  key_coder.h  ordinal_key_index.h  ordinal_page_index.h  short_key_index.h
include/struct/: ColumnValue.h  Requests.h  Row.h  Schema.h  Vin.h
include/util/: memcpy.h
include/vec/: ColumnNumber.h  ColumnString.h  IColumn.h  block.h  mutable_block.h
include/vec/blocks/: block.h  mutable_block.h
include/vec/columns/: ColumnFactory.h  ColumnNumber.h  ColumnString.h  IColumn.h  column_with_type_and_name.h
include/vec/datatypes/: DataTypeFactory.h  DataTypeFloat64.h  DataTypeInt32.h  DataTypeString.h  IDataType.h
source/: TSDBEngineImpl.cpp
source/bitpacking/include/: bitpacking.h  simdcomp.h  simdfor.h  simdintegratedbitpacking.h
source/bitpacking/src/: avx512bitpacking.c  avxbitpacking.c  simdbitpack.c  simdbitpacking.c  simdcomputil.c  simdfor.c  simdintegratedbitpacking.c  simdpackedsearch.c  simdpackedselect.c
source/brotli/common/: context.c  platform.c  shared_dictionary.c
source/brotli/dec/: bit_reader.c  decode.c  huffman.c  state.c
source/brotli/enc/: backward_references.c  backward_references_hq.c  bit_cost.c  block_splitter.c  brotli_bit_stream.c  cluster.c  command.c  compound_dictionary.c  compress_fragment.c  compress_fragment_two_pass.c  encode.c  encoder_dict.c  entropy_encode.c  literal_cost.c  memory.c  metablock.c  utf8_util.c
source/chimp/include/: chimp.hpp  chimp_compress.hpp  chimp_scan.hpp
source/chimp/source/: bit_reader.cpp  chimp_constants.cpp  flag_buffer.cpp  leading_zero_buffer.cpp
source/compression/: boolean_compressor.cpp  chimp_compressor.cpp  float_compressor.cpp  integer_compressor.cpp  string_compressor.cpp
source/compression/simple8b/: simple8b.cpp  simple8b.h
source/fastp/: VarIntG8IU.h  bitpacking.cpp  bitpacking.h  bitpackingaligned.cpp  bitpackingaligned.h  bitpackinghelpers.h  bitpackingunaligned.cpp  bitpackingunaligned.h  blockpacking.h  codecfactory.cpp  codecfactory.h  codecs.cpp  codecs.h  common.h  compositecodec.h  cpubenchmark.h  csv.h  csv2maropu.cpp  deltautil.h  entropy.cpp  entropy.h  externalvector.h  fastpfor.h  gapstats.cpp  horizontalbitpacking.cpp  horizontalbitpacking.h  inmemorybenchmark.cpp  maropuparser.h  memutil.h  mersenne.h  newpfor.h  optpfor.h  packingvectors.h  partitionbylength.cpp  pfor.h  pfor2008.h  rolledbitpacking.h  simdbinarypacking.h  simdbitpacking.cpp  simdbitpacking.h  (+25 more)
source/io/: file_reader.cpp  file_system.cpp  file_writer.cpp  page_io.cpp
source/io/compression_algorithm/: gorilla_compressor.cpp
source/pfor/: bitpackinghelpers.h  deltautil.h  pfor_bitpacking.cpp  pfor_bitpacking.h  pfor_simdbitpacking.cpp  simdfastpfor.h
source/storage/: column_writer.cpp  delta_writer.cpp  memmap.cpp  memmap_writer.cpp  memtable.cpp  rowset_writer.cpp  segment_writer.cpp  table_writer.cpp  tsm_file.cpp  tsm_writer.cpp
source/struct/: ColumnValue.cpp  Row.cpp  Schema.cpp  Vin.cpp
source/vec/: ColumnNumber.cpp  ColumnString.cpp  IColumn.cpp  block.cpp  mutable_block.cpp
test/: CMakeLists.txt  arena_test.cpp  bitmap_test.cpp  block_test.cpp  coding_test.cpp  column_test.cpp  column_writer_reader_test.cpp  compression_test.cpp  data_page_test.cpp  delta_writer_test.cpp  demo_test.cpp  gorilla_compression_test.cpp  index_page_test.cpp  io_test.cpp  memtable_test.cpp  multi_thread_test.cpp  ordinal_key_index_test.cpp  page_test.cpp  parallel_merge_join_test.cpp  schema_test.cpp  segment_writer_reader_test.cpp  short_key_index_test.cpp  skip_list_test.cpp  table_writer_reader_test.cpp  table_writer_test.cpp  thread_pool_test.cpp  tsm_test.cpp
(+21 files in other folders)
